# monorepo-exp

./: .gitignore  README.md  WORKSPACE
go/: README.md  go.mod
go/libs/hello/: BUILD.bazel  go.mod
go/projects/one/: BUILD.bazel  go.mod  go.sum
go/projects/two/: BUILD.bazel  go.mod
python/: WORKSPACE
python/libs/bar/: BUILD  pyproject.toml
python/libs/foo/: BUILD  pyproject.toml
