load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hello",
    srcs = ["main.go"],
    importpath = "go/libs/hello",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_test",
    srcs = ["hello_test.go"],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["hello_test.go"],
    embed = [":go_default_library"],
)
