load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "one",
    srcs = ["main.go"],
    deps = [
        "@com_github_earthly_earthly_examples_go_monorepo_libs_hello//:go_default_library",
        "@com_github_labstack_echo_v4//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
)
